--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["ikhabibullin <mailofilyas@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.89.1"
+uvicorn = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
