--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ fastapi = "^0.89.1"
 uvicorn = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.2.1"
+httpx = "^0.23.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
