--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ fastapi = "^0.89.1"
 uvicorn = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
+black = "^22.12.0"
+autoflake = "^2.0.0"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
