--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = ["ikhabibullin <mailofilyas@gmail.com>"]
 python = "^3.9"
 fastapi = "^0.89.1"
 uvicorn = "^0.20.0"
+celery = "^5.2.7"
+redis = "^4.4.2"
+flower = "^1.2.0"
+certifi = "^2022.12.7"
 
 [tool.poetry.dev-dependencies]
 black = "^22.12.0"
@@ -15,6 +19,9 @@ autoflake = "^2.0.0"
 flake8 = "^6.0.0"
 pytest = "^7.2.1"
 httpx = "^0.23.3"
+
+[tool.black]
+line-length = 120
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
