--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ celery = "^5.2.7"
 redis = "^4.4.2"
 flower = "^1.2.0"
 certifi = "^2022.12.7"
+asyncpg = "^0.27.0"
+SQLAlchemy = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.12.0"
@@ -22,6 +24,7 @@ httpx = "^0.23.3"
 
 [tool.black]
 line-length = 120
+skip-string-normalization = 1
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
