--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,7 @@ count = True
 in-place = True
 remove-all-unused-imports = True
 remove-unused-variables = True
+
+[tool:pytest]
+addopts = -v --disable-warnings
+asyncio_mode=auto
